<resources>
    <string name="app_name">Health Report</string>
    <string name="title_home">Home</string>
    <string name="title_global">Global</string>
    <string name="title_report">Report</string>
    <string name="image_description">Image of Covid-19 actions.</string>
    <string name="title_message">Health Report</string>
    <string name="covid_19_live_tracker">Local Covid-19 Tracker</string>
    <string name="kenya">Kenya</string>
    <string name="global">Global</string>
    <string name="number_blank">-</string>
    <string name="title">title</string>
    <string name="value">Value</string>
    <string name="recovered">Recovered</string>
    <string name="confirmed">Confirmed</string>
    <string name="deaths">Deaths</string>
    <string name="offence_description">Offence Description</string>
    <string name="kcd_133k">KCD 133K</string>
    <string name="long_description">Some Very Long Description.</string>
    <string name="short_description">Offence Short Description</string>
    <string name="culprint_name">Culprint Name</string>
    <string name="culprit">Culprit: %1$s</string>
    <string name="sacco_name">Sacco Name: %1$s</string>
    <string name="sacco_name_hint">Sacco Name</string>
    <string name="offender">Offender</string>
    <string name="offence">Offence</string>
    <string name="route_name">Route Name: %1$s</string>
    <string name="route_name_hint">Route Name</string>
    <string name="plate_number">Plate Number</string>
    <string name="matatu_details">Matatu Details</string>
    <string name="report_matatu_offences">Report Matatu offences</string>
    <string name="number_plate">Number Plate: %1$s</string>
    <string name="gloabl_covid_19_tracker">Global Covid-19 Tracker</string>
    <string-array name="countries">
        <item>Global</item>
        <item>Kenya</item>
    </string-array>

    <string name="admin_string">IS_ADMIN</string>
    <string name="select_account">Should_Select_Account</string>
    <string name="counter_string">Counter</string>
    <string name="counter">%1$d</string>
    <string name="level_string">Level</string>
    <string name="level">Level: %1$d</string>
    <string name="points_string">Points</string>
    <string name="points">Points: %1$d</string>
    <string name="point_scores">POINT_SCORES</string>
    <string name="level_count">LEVEL_COUNT</string>
    <string name="game">Game</string>
    <string name="app_intro_string">AppIntroConstant</string>
</resources>
