<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="codes.malukimuthusi.healthreportapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="codes.malukimuthusi.healthreportapp.ui.gameInfo.GameInfoFragment"
        android:label="@string/title_global"
        tools:layout="@layout/fragment_game_info" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="codes.malukimuthusi.healthreportapp.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />
    <fragment
        android:id="@+id/reportsViewFragment"
        android:name="codes.malukimuthusi.healthreportapp.ReportsViewFragment"
        android:label="reports_view_fragment"
        tools:layout="@layout/reports_view_fragment" />
</navigation>
