<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="codes.malukimuthusi.healthreportapp.ui.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">


        <TextView
            android:id="@+id/covid19Tracker"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/covid_19_live_tracker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/covid19Tracker">

        </com.github.mikephil.charting.charts.PieChart>

        <HorizontalScrollView
            android:id="@+id/chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacingHorizontal="@dimen/_16dp"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/kenya"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kenya" />


            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/recovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/confirmed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chips"
            app:title="@string/recovered">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/stat_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:tint="@color/GREEN_A_700"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/stat_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:maxWidth="140dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:text="@{viewModel.recorvered}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold"
                tools:text="2913415" />

            <TextView
                android:id="@+id/stat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxWidth="120dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:singleLine="true"
                android:text="@string/recovered" />
        </LinearLayout>

        <codes.malukimuthusi.healthreportapp.SingleStatView
            android:id="@+id/confirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:icon="@drawable/ic_info_outline_black_24dp"
            app:iconColor="@color/YELLOW_A_700"
            app:layout_constraintBottom_toBottomOf="@+id/recovered"
            app:layout_constraintEnd_toStartOf="@+id/deaths"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/recovered"
            app:layout_constraintTop_toTopOf="@+id/recovered"
            app:statValue="-"
            app:title="@string/confirmed" />


        <codes.malukimuthusi.healthreportapp.SingleStatView
            android:id="@+id/deaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:icon="@drawable/ic_emoticon_death_24dp"
            app:iconColor="@color/RED_A_700"
            app:layout_constraintBottom_toBottomOf="@+id/confirmed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/confirmed"
            app:layout_constraintTop_toTopOf="@+id/confirmed"
            app:statValue="-"
            app:title="@string/deaths" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>